--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div class="main">
       <h1 class="main-title">To do list</h1>
       <div class="addTask-wrapper">
-        <input class="newTask" type="text" placeholder="Новая задача">
-        <input class="addTaskBtn" type="button" value="Добавить задачу">
+        <input class="newTask form-control" type="text" placeholder="Введите новую задачу">
+        <input class="addTaskBtn btn btn-primary" type="button" value="Добавить задачу">
       </div>
       
       
